added swagger support

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint -c ./.eslintrc.json src/*",
-    "build": "npm run lint && npm run compile",
-    "compile": "./node_modules/.bin/babel src/ -d build -s --ignore spec.js -w -s",
+    "build": "npm run lint && npm run compile && npm run copy-files",
+    "compile":
+      "./node_modules/.bin/babel src/ -d build -s --ignore spec.js -w -s",
     "start-nodemon": "nodemon ./build/server.js",
     "serve": "npm run build | npm run start-nodemon",
+    "copy-files": "./node_modules/.bin/gulp copy-folders",
     "sqlz:migrate": "./node_modules/.bin/sequelize db:migrate",
     "sqlz:undo": "./node_modules/.bin/sequelize db:migrate:undo",
     "sqlz:migration:new": "./node_modules/.bin/sequelize migration:create",
@@ -58,6 +60,9 @@
     "eslint-config-node": "^2.0.0",
     "eslint-config-nodejs": "^2.0.0",
     "eslint-plugin-import": "^2.9.0",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
+    "gulp-file": "^0.4.0",
     "mocha": "^5.0.2",
     "nodemon": "^1.15.1",
     "rimraf": "^2.6.2",
