attached SPA app. Written routes to serve SPA.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint -c ./.eslintrc.json src/*",
-    "build": "npm run lint && npm run compile && npm run copy-files",
-    "compile":
-      "./node_modules/.bin/babel src/ -d build -s --ignore spec.js -w -s",
+    "build": "npm run clean-build && npm run lint && npm run copy-files && npm run compile",
+    "build:prod": "npm run clean-build && npm run lint && npm run copy-files && npm run compile:prod",
+    "compile": "./node_modules/.bin/babel src -d build -s --ignore spec.js -w -s",
+    "compile:prod": "./node_modules/.bin/babel src/ -d build -s --ignore spec.js -s",
     "start-nodemon": "nodemon ./build/server.js",
-    "serve": "npm run build | npm run start-nodemon",
+    "clean-build": "./node_modules/.bin/gulp clean-build",
+    "serve": "npm run start-nodemon",
     "copy-files": "./node_modules/.bin/gulp copy-folders",
     "sqlz:migrate": "./node_modules/.bin/sequelize db:migrate",
     "sqlz:undo": "./node_modules/.bin/sequelize db:migrate:undo",
@@ -23,6 +25,7 @@
     "bcrypt": "^1.0.3",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
+    "cors": "^2.8.4",
     "cross-env": "5.1.3",
     "express": "4.16.2",
     "express-validator": "^5.0.2",
@@ -63,9 +66,10 @@
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1",
     "gulp-file": "^0.4.0",
+    "gulp-rimraf": "^0.2.2",
+    "mkdirp": "^0.5.1",
     "mocha": "^5.0.2",
     "nodemon": "^1.15.1",
-    "rimraf": "^2.6.2",
     "sequelize-cli": "^4.0.0"
   },
   "author": "",
