changed gulp tasks and added few supporting plugins for gulp.

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint -c ./.eslintrc.json src/*",
-    "build": "npm run clean-build && npm run lint && npm run copy-files && npm run compile",
+    "build": "npm run clean-build && npm run lint && npm run copy-files && npm run compile && npm run set-watch",
     "build:prod": "npm run clean-build && npm run lint && npm run copy-files && npm run compile:prod",
-    "compile": "./node_modules/.bin/babel src -d build -s --ignore spec.js -w -s",
-    "compile:prod": "./node_modules/.bin/babel src/ -d build -s --ignore spec.js -s",
+    "compile": "./node_modules/.bin/gulp compile-babel",
     "start-nodemon": "nodemon ./build/server.js",
     "clean-build": "./node_modules/.bin/gulp clean-build",
+    "set-watch": "./node_modules/.bin/gulp set-watch",
     "serve": "npm run start-nodemon",
     "copy-files": "./node_modules/.bin/gulp copy-folders",
     "sqlz:migrate": "./node_modules/.bin/sequelize db:migrate",
@@ -64,6 +64,7 @@
     "eslint-config-nodejs": "^2.0.0",
     "eslint-plugin-import": "^2.9.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-cli": "^2.0.1",
     "gulp-file": "^0.4.0",
     "gulp-rimraf": "^0.2.2",
