--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run clean-build && npm run lint && npm run copy-files && npm run compile && npm run set-watch",
     "build:prod": "npm run clean-build && npm run lint && npm run copy-files && npm run compile:prod",
     "compile": "./node_modules/.bin/gulp compile-babel",
-    "start-nodemon": "nodemon ./build/server.js",
+    "start-nodemon": "nodemon ./build/src/server.js",
     "clean-build": "./node_modules/.bin/gulp clean-build",
     "set-watch": "./node_modules/.bin/gulp set-watch",
     "serve": "npm run start-nodemon",
