Added environment variables support to manage app secrets

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint -c ./.eslintrc.json src/*",
-    "build": "npm run clean-build && npm run lint && npm run copy-files && npm run compile && npm run set-watch",
-    "build:prod": "npm run clean-build && npm run lint && npm run copy-files && npm run compile:prod",
+    "build": "cross-env NODE_ENV=development npm run clean-build && npm run lint && npm run copy-files && npm run compile && npm run set-watch",
+    "build:prod": "cross-env NODE_ENV=production npm run clean-build && npm run lint && npm run copy-files && npm run compile",
     "compile": "./node_modules/.bin/gulp compile-babel",
-    "start-nodemon": "nodemon ./build/src/server.js",
+    "start-nodemon": "cross-env NODE_ENV=development nodemon ./build/src/server.js",
     "clean-build": "./node_modules/.bin/gulp clean-build",
     "set-watch": "./node_modules/.bin/gulp set-watch",
     "serve": "npm run start-nodemon",
@@ -26,13 +26,15 @@
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "cors": "^2.8.4",
-    "cross-env": "5.1.3",
+    "dotenv": "^5.0.1",
     "express": "4.16.2",
     "express-validator": "^5.0.2",
     "helmet": "3.11.0",
     "inversify": "4.10.0",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
+    "node-schedule": "^1.3.0",
+    "nodemailer": "^4.6.3",
     "objectmodel": "^3.3.0",
     "pg": "7.4.1",
     "pg-hstore": "~2.3.2",
@@ -59,6 +61,7 @@
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "cross-env": "^5.1.3",
     "eslint": "^4.19.0",
     "eslint-config-node": "^2.0.0",
     "eslint-config-nodejs": "^2.0.0",
