--- a/package.json
+++ b/package.json
@@ -20,63 +20,61 @@
     "sqlz:seed:all": "./node_modules/.bin/sequelize db:seed:all"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "babel-polyfill": "^6.26.0",
-    "bcrypt": "^1.0.3",
-    "bluebird": "3.5.1",
-    "body-parser": "1.18.2",
+    "bcrypt": "^3.0.6",
+    "bluebird": "^3.5.5",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.4",
-    "dotenv": "^5.0.1",
-    "express": "4.16.2",
-    "express-validator": "^5.0.2",
-    "helmet": "3.11.0",
-    "inversify": "4.10.0",
-    "jsonwebtoken": "^8.2.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.22.0",
-    "node-schedule": "^1.3.0",
-    "nodemailer": "^4.6.3",
-    "objectmodel": "^3.3.0",
-    "pg": "7.4.1",
-    "pg-hstore": "~2.3.2",
+    "dotenv": "^8.1.0",
+    "express": "4.17.1",
+    "express-validator": "^6.2.0",
+    "helmet": "^3.21.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "node-schedule": "^1.3.2",
+    "nodemailer": "^6.3.0",
+    "objectmodel": "^4.0.3",
     "reflect-metadata": "0.1.12",
-    "sequelize": "4.33.4",
-    "uuid": "^3.2.1",
-    "winston": "^2.4.1"
+    "sequelize": "^5.18.4",
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^1.0.0",
-    "@types/bluebird": "3.5.20",
-    "@types/chai": "4.1.2",
-    "@types/express": "4.11.1",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.6.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/bluebird": "3.5.27",
+    "@types/chai": "4.2.3",
+    "@types/express": "4.17.1",
     "@types/express-validator": "3.0.0",
-    "@types/jsonwebtoken": "7.2.5",
-    "@types/lodash": "4.14.105",
-    "@types/mocha": "2.2.48",
-    "@types/node": "9.4.6",
-    "@types/sequelize": "4.27.6",
-    "@types/source-map-support": "^0.4.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
-    "cross-env": "^5.1.3",
-    "eslint": "^4.19.0",
-    "eslint-config-node": "^2.0.0",
+    "@types/jsonwebtoken": "^8.3.3",
+    "@types/lodash": "^4.14.138",
+    "@types/mocha": "5.2.7",
+    "@types/node": "12.7.5",
+    "@types/sequelize": "^4.28.4",
+    "@types/source-map-support": "^0.5.0",
+    "babel-eslint": "^10.0.3",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cross-env": "^6.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-node": "^4.0.0",
     "eslint-config-nodejs": "^2.0.0",
-    "eslint-plugin-import": "^2.9.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
-    "gulp-cli": "^2.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-cli": "^2.2.0",
     "gulp-file": "^0.4.0",
-    "gulp-rimraf": "^0.2.2",
+    "gulp-rimraf": "^1.0.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^5.0.2",
-    "nodemon": "^1.15.1",
-    "sequelize-cli": "^4.0.0"
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.2",
+    "sequelize-cli": "^5.5.1"
   },
   "author": "",
   "license": "ISC"
