--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-sequelize",
+  "name": "ec2-app",
   "version": "0.0.1",
   "description": "This project is using express and sequelize",
   "main": "index.js",
@@ -29,15 +29,18 @@
     "dotenv": "^8.1.0",
     "express": "4.17.1",
     "express-validator": "^6.2.0",
+    "gulp-sourcemaps": "^2.6.5",
     "helmet": "^3.21.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "mysql2": "^2.1.0",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.3.0",
-    "objectmodel": "^4.0.3",
+    "objectmodel": "^3.7.7",
     "reflect-metadata": "0.1.12",
     "sequelize": "^5.18.4",
+    "source-map-support": "^0.5.16",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
   },
